# Local_SF_Architect

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: vs_code_mcp_setup_guide_2aae7c86.plan.md
.github/workflows/: engine.yml  extension.yml
data/: limits_seed.yaml  patterns_seed.yaml
docs/: Extension-Changes-and-Guide.md  Getting-Started-New-User.md  Implementation-Plan.md  Local-SF-Architect-Analysis-and-Plan.md  Poori-Jankari-Hindi.md  Tech-Stack.md  cursor-and-claude-code-setup.md  mcp-cursor-setup.md  vscode-setup.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
extension/media/: walkthrough-configure.md  walkthrough-install.md  walkthrough-seed.md
extension/src/: constants.ts  detect.ts  engine.ts  extension.ts  jsonConfig.ts  log.ts  proc.ts  setup.ts  statusBar.ts
extension/src/wiring/: claudeCode.ts  cursor.ts  vscode.ts
src/sf_architect/: __init__.py  bootstrap.py  cache.py  cli.py  confidence.py  contracts.py  lint.py  locking.py  rerank.py  server.py
src/sf_architect/diagrams/: __init__.py  drawio.py  mermaid.py  render.py
src/sf_architect/engines/: __init__.py  depgraph.py  limits.py  patterns.py  router.py  scoring.py
src/sf_architect/ingest/: __init__.py  chunk.py  embed.py  scraper.py
src/sf_architect/memory/: __init__.py  env_context.py  overrides.py  persona.py  ranking.py
src/sf_architect/obs/: __init__.py  audit.py
src/sf_architect/security/: __init__.py  allowlist.py  guard.py  sanitize.py
tests/: conftest.py  test_allowlist.py  test_audit.py  test_cache.py  test_confidence.py  test_contracts.py  test_depgraph.py  test_drawio.py  test_golden.py  test_guard.py  test_health.py  test_ingest.py  test_limits.py  test_lint.py  test_locking.py  test_maintenance.py  test_mermaid.py  test_no_network.py  test_overrides.py  test_overrides_ranking.py  test_patterns.py  test_persona.py  test_rerank.py  test_router.py  test_sanitize.py  test_scoring.py  test_versioning.py
tests/fixtures/lint/: Bad.cls  BadRules.cls  Clean.cls
tests/fixtures/sfdx/: sfdx-project.json
tests/fixtures/sfdx/force-app/main/default/classes/: AccountService.cls  ContactHelper.cls  DynamicQuery.cls  OrderProcessor.cls
tests/golden/: retrieval.yaml
