[project]
name = "sf-local-architect"
version = "0.2.0"
description = "Local offline Salesforce architect MCP server for Cursor and Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1",
    "fastembed>=0.6",
    "fastmcp>=3.4",
    "lancedb>=0.22",
    "lxml>=5.3",
    "pyyaml>=6.0",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.7",
]

[project.optional-dependencies]
scrape = ["crawl4ai>=0.8"]

[project.scripts]
sf-architect = "sf_architect.cli:main"
sf-architect-mcp = "sf_architect.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_architect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
