[project]
name = "sf-local-architect"
version = "0.2.0"
description = "Local offline Salesforce architect MCP server for Cursor and Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1",
    "fastembed>=0.6",
    "fastmcp>=3.4",
    "lancedb>=0.22",
    "lxml>=5.3",
    "pyyaml>=6.0",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.7",
]

[project.optional-dependencies]
scrape = ["crawl4ai>=0.8"]

[project.scripts]
sf-architect = "sf_architect.cli:main"
sf-architect-mcp = "sf_architect.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Keep the source distribution to the Python project only. Without this,
# hatchling includes everything not gitignored — notably the committed
# `extension/` bundle and its `node_modules/`, bloating the sdist to ~31 MB.
# Leading slashes anchor to the project root; unanchored names like
# "README.md" would otherwise match nested files (e.g. under node_modules).
include = [
    "/src",
    "/data/limits_seed.yaml",
    "/data/patterns_seed.yaml",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sf_architect"]

# Ship the curated seed data inside the wheel so `sf-architect seed` works for
# users who install from PyPI (e.g. via `uv tool install` / `uvx`) and never
# clone the repo. The files stay at the repo-root `data/` for dev + tests.
[tool.hatch.build.targets.wheel.force-include]
"data/limits_seed.yaml" = "sf_architect/data/limits_seed.yaml"
"data/patterns_seed.yaml" = "sf_architect/data/patterns_seed.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
